--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "tabtab": "^2.0.1"
+    "tabtab": "^2.0.1",
+    "gitbook-cli": "^2.3.0"
   },
   "devDependencies": {
     "eslint": "^3.7.1",
     "eslint-config-standard": "^6.2.0",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-standard": "^2.0.1",
-    "gitbook-cli": "^2.3.0",
     "mocha": "^3.1.0"
   }
 }
