--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "install": "tabtab install --name gitbook --completer gitbook-completions --auto",
     "uninstall": "tabtab uninstall --name gitbook --auto",
-    "test": "mocha -R spec",
+    "test": "npm run lint && mocha -R spec",
+    "lint": "eslint bin/ lib/",
     "test-completion": "export cmd=\"gitbook fetch \" && DEBUG=\"tabtab*\" COMP_POINT=\"14\" COMP_LINE=\"$cmd\" COMP_CWORD=\"$cmd\" gitbook-completions completion --json"
   },
   "keywords": [
