--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gitbook-completions",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "bin": "bin/gitbook-complete.js",
   "scripts": {
@@ -8,6 +8,8 @@
     "uninstall": "tabtab uninstall --name gitbook --auto",
     "test": "npm run lint && mocha -R spec",
     "lint": "eslint bin/ lib/ test/",
+    "changelog": "standard-version -m '%s'",
+    "release": "standard-version -m '%s' && git push origin master --tags && npm publish",
     "test-completion": "export cmd=\"gitbook fetch \" && DEBUG=\"tabtab*\" COMP_POINT=\"14\" COMP_LINE=\"$cmd\" COMP_CWORD=\"$cmd\" gitbook-completions completion --json"
   },
   "keywords": [
@@ -23,6 +25,7 @@
     "eslint-config-standard": "^6.2.0",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-standard": "^2.0.1",
-    "mocha": "^3.1.0"
+    "mocha": "^3.1.0",
+    "standard-version": "^3.0.0"
   }
 }
